# Cooperative-Robot-Behavior-from-Basic-Action-Modules

./: +  .gitignore  .gitmodules  FileLogger.cs  LICENSE  README.md  RoboScan alias  USER_GUIDE.md  start_llm_servers.sh
ACRLDashboard/: index.html  script.js  style.css
ACRLDashboard/css/: components.css  layout.css  variables.css
ACRLDashboard/js/: URDFLoader.js  autort.js  main.js  network.js  renderer.js  ui.js
ACRLPython/: .gitignore  LLMConfig.py  SEQUENCE_ONLY_RESTRUCTURE_PLAN.md  __init__.py  pyrightconfig.json  pytest.ini  requirements-test.txt  requirements.txt  start_servers.sh
ACRLPython/LLMcommunication/: .env.example  AnalyzeImage.py  LLMConfig.py  OBJECT_DETECTION_README.md  README.md  ResultsServer.py  ResultsServer_original.py  RunAnalyzer.py  STEREO_DEPTH_README.md  SendScreenshots.py  StreamingServer.py  _REFACTORING_NOTE.md  __init__.py  config.py  llm_config.py  requirements.txt
ACRLPython/StereoImageReconstruction/: README.md  (+6 more)
ACRLUnity/: .gitignore  ACRLUnity.slnx
graspnetService/: Dockerfile  docker-compose.yml  graspnet_server.py  pyrightconfig.json
llm_responses/: TableCamera_20251020_135055.json  TableCamera_20251021_085922.json
rosUnityIntegration/: Dockerfile  docker-compose.yml  start_ros_endpoint.sh
ros_unity_integration/: README.md  docker-compose.yml  verify_setup.sh
ros_unity_integration/ar4_moveit_config/: package.xml
ros_unity_integration/ar4_moveit_config/config/: joint_limits.yaml  moveit_controllers.yaml  ompl_planning.yaml
ros_unity_integration/ar4_moveit_config/launch/: demo.launch.py  move_group.launch.py
(+687 files in other folders)
